--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
-  <img src="taco.png" />
+  <img src="taco.png" onclick="tacoclick();" id="taco" />
+  <script src="main.js" />
 </body>
 </html>
