--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <img src="taco.png" onclick="tacoclick();" id="taco" />
+  <h1 class="center" id="tacoz"></h1><h1 class="center">TAK0Z</h1>
   <script src="main.js" />
 </body>
 </html>
